--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@babel/core": "^7.18.13",
     "@babel/preset-env": "^7.18.10",
     "browser-sync": "^2.27.10",
-    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^5.1.0",
     "gulp-uglify": "^3.0.2",
     "sass": "^1.54.6"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
